src/objects/Enterprise_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enterprise Activities</relationshipLabel>
        <relationshipName>Enterprise_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIO_CTO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIO/CTO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <label>Engineer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alec Kemp</fullName>
                </value>
                <value>
                    <fullName>Allen Patterson</fullName>
                </value>
                <value>
                    <fullName>Anson McCook</fullName>
                </value>
                <value>
                    <fullName>Aseem Anwar</fullName>
                </value>
                <value>
                    <fullName>Barry Howard</fullName>
                </value>
                <value>
                    <fullName>Brad Blogett</fullName>
                </value>
                <value>
                    <fullName>Charles Russell</fullName>
                </value>
                <value>
                    <fullName>Chris Rauch</fullName>
                </value>
                <value>
                    <fullName>Chris Williamson</fullName>
                </value>
                <value>
                    <fullName>Daniel Butzer</fullName>
                </value>
                <value>
                    <fullName>Don McKeith</fullName>
                </value>
                <value>
                    <fullName>Eric Horsman</fullName>
                </value>
                <value>
                    <fullName>Francois Guillaume</fullName>
                </value>
                <value>
                    <fullName>Hillel Adler</fullName>
                </value>
                <value>
                    <fullName>Iddo Avneri</fullName>
                </value>
                <value>
                    <fullName>Jacob Ben-David</fullName>
                </value>
                <value>
                    <fullName>James Dyckowski</fullName>
                </value>
                <value>
                    <fullName>Jamie Hodge</fullName>
                </value>
                <value>
                    <fullName>Jason Beaudette</fullName>
                </value>
                <value>
                    <fullName>Jason Howard</fullName>
                </value>
                <value>
                    <fullName>Jason Huff</fullName>
                </value>
                <value>
                    <fullName>Jeremy Levenson</fullName>
                </value>
                <value>
                    <fullName>Jerome Papazian</fullName>
                </value>
                <value>
                    <fullName>Jimmy Herbert</fullName>
                </value>
                <value>
                    <fullName>Joe Burke</fullName>
                </value>
                <value>
                    <fullName>Juan Santos</fullName>
                </value>
                <value>
                    <fullName>Jules Albin</fullName>
                </value>
                <value>
                    <fullName>Kent Nierendorf</fullName>
                </value>
                <value>
                    <fullName>Kevin Lamb</fullName>
                </value>
                <value>
                    <fullName>Luis DaSilva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enterprise_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Summary__c</fullName>
        <label>Meeting Summary</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Objective__c</fullName>
        <label>Primary Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Enterprise Activities</relationshipLabel>
        <relationshipName>Enterprise_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SE_Assigned__c</fullName>
        <formula>Account__r.SE_Assigned1__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SE Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP</label>
        <type>Checkbox</type>
    </fields>
    <label>Enterprise Activity</label>
    <nameField>
        <label>Enterprise Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enterprise Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>